--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-21
+    # - sys-img-armeabi-v7a-android-21
     # - sys-img-x86-android-17
 
   licenses:
@@ -40,12 +40,12 @@ env:
     - ADB_INSTALL_TIMEOUT=8
 
 # Emulator Management: Create, Start and Wait
-before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+# before_script:
+#  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+#  - emulator -avd test -no-skin -no-audio -no-window &
+#  - android-wait-for-emulator
+#  - adb shell input keyevent 82 &
 
-script:
-  - android list target
-  - ./gradlew connectedAndroidTest
+# script:
+#  - android list target
+#  - ./gradlew connectedAndroidTest
